# Settlepay_Website

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  README.md  astro.config.mjs  fix_klarna.py  index.html  main.js  middleware.ts  package-lock.json  package.json  skills-lock.json  styles.css  tokens.json  tsconfig.json  vercel.json
outreach/: .dockerignore  .env.example  .gitignore  Dockerfile  LLM_MODELS.md  README.md  pyproject.toml  sequence_config.json
outreach/bench/: draft_bench.py
outreach/docs/: credit-reservoir-design.md  credit-reservoir-plan.md  deploy-cloudrun.md  pipeline-restructure.md  pre-send-blockers.md  system-assessment.md
outreach/migrations/: 0001_init.sql  0002_send_inbox.sql  0003_contact_tier.sql  0004_replies_message_id.sql  0005_ops_platform.sql  0006_places.sql  0007_subject_final.sql  0008_send_queue.sql  0009_crm.sql  0010_recover_verify_errors.sql  0011_decision_makers.sql
outreach/ops/: deploy-cloudrun.sh  install-console.sh  uninstall-console.sh
outreach/outreach/: __init__.py  __main__.py  audit.py  auth_google.py  companies_house.py  config.py  crossref.py  db.py  decisionmakers.py  deepmatch.py  dns_auth.py  draft.py  emailfmt.py  enquiries.py  enrich.py  export.py  find_leads.py  firewall.py  followup.py  gmail.py  google_oauth.py  graduation.py  inbound.py  jobs.py  llm.py  migrate.py  monitor.py  outbox.py  places.py  report.py  research.py  review.py  run.py  schedule.py  send.py  sequence.py  spend.py  states.py  stats.py  targeting.py  (+4 more)
outreach/prompts/: draft_email.md
outreach/tests/: conftest.py  test_jobs.py  (+38 more)
(+319 files in other folders)
