[project]
name = "outreach"
version = "0.1.0"
description = "SettlePay UK PECR-compliant agentic cold-email outreach pipeline (drafting MECHANISM only; conversion strategy is deferred)."
requires-python = ">=3.12,<3.13"
dependencies = [
  "psycopg[binary]>=3.2",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "anthropic>=0.40",
  "google-genai>=1.0",
  "argon2-cffi>=23.1",
  "itsdangerous>=2.1",
  "google-auth>=2.29",
  # python:3.12-slim ships no tz database, so ZoneInfo("Europe/London") raises in
  # the container. The send window is UK wall-clock time — this is load-bearing.
  "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
web = ["fastapi>=0.110", "uvicorn>=0.29", "python-multipart>=0.0.9"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "floor_a: phase A foundations floor",
  "floor_b: phase B find_leads floor",
  "floor_c: phase C compliance firewall floor",
  "floor_d: phase D enrich_company floor",
  "floor_e: phase E draft_email floor",
  "floor_f: phase F approval queue floor",
  "floor_g: phase G send floor",
  "floor_h: phase H operational wiring floor",
]
